# voyis-distributed-image-system

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
common/: CMakeLists.txt
common/include/common/: frame.hpp  sqlite_utils.hpp  zmq_utils.hpp
common/src/: frame.cpp  sqlite_utils.cpp  zmq_utils.cpp
data_logger/: CMakeLists.txt
data_logger/src/: main.cpp
feature_extractor/: CMakeLists.txt
feature_extractor/src/: main.cpp
image_generator/: CMakeLists.txt
image_generator/src/: main.cpp
